refactor: change the file structure to make it more clear.